# GestorDocumental-BackEnd

./: .gitignore  Cargo.toml  Dockerfile  README.md  text.txt
.cargo/: config.toml
.github/workflows/: commit-struct.yml  git-flow.yml  main.yml  publish_rust.yml  pullReq.yml  run_tests.yml  rust-ci.yml  rust.yml
crates/libs/lib-auth/src/: lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/model/: archive.rs  base.rs  datatype.rs  document.rs  error.rs  index.rs  mod.rs  project.rs  role.rs  separator.rs  user.rs  value.rs
crates/libs/lib-core/src/model/bucket/: error.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: archive_rpc.rs  config.rs  datatype_rpc.rs  document_rpc.rs  error.rs  index_rpc.rs  lib.rs  project_rpc.rs  role_rpc.rs  search_operations_rpc.rs  separator_rpc.rs  user_rpc.rs  value_rpc.rs
crates/libs/lib-rpc/src/rpcs/: archive_rpc.rs  datatype_rpc.rs  document_rpc.rs  index_rpc.rs  mod.rs  project_rpc.rs  role_rpc.rs  search_operations_rpc.rs  separator_rpc.rs  user_rpc.rs  value_rpc.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: config.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/auth/: config.rs
src/auth/pwd/: error.rs  mod.rs
src/auth/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
src/auth/token/: mod.rs
src/core/: config.rs
src/core/_dev_utils/: dev_db.rs  mod.rs
src/core/ctx/: mod.rs
src/core/model/: archive.rs  archive_comment.rs  archive_event.rs  associated_privilege.rs  base.rs  comment.rs  datatype.rs  document.rs  document_comment.rs  document_event.rs  error.rs  event.rs  idens.rs  index.rs  mod.rs  privilege.rs  project.rs  role.rs  search_operations.rs  separator.rs  structure.rs  structure_privilege.rs  user.rs  value.rs
src/core/model/bucket/: mod.rs
src/core/model/store/: mod.rs
src/crypt/: mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/examples/: quick_dev.rs
src/log/: mod.rs
src/model/: archive.rs  base.rs  datatype.rs  document.rs  error.rs  index.rs  mod.rs  project.rs  role.rs  separator.rs  task.rs  user.rs  value.rs
src/model/bucket/: error.rs  mod.rs
src/model/store/: mod.rs
src/rpc/: config.rs  error.rs  mod.rs  params.rs  utils.rs
src/rpc/rpcs/: archive_comment_rpc.rs  archive_event_rpc.rs  archive_rpc.rs  associated_privilege_rpc.rs  comment_rpc.rs  datatype_rpc.rs  document_comment_rpc.rs  document_event_rpc.rs  document_rpc.rs  event_rpc.rs  index_rpc.rs  mod.rs  privilege_rpc.rs  project_rpc.rs  role_rpc.rs  search_operations_rpc.rs  separator_rpc.rs  structure_privilege.rs  structure_rpc.rs  user_rpc.rs  value_rpc.rs
src/utils/: envs.rs  error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
src/web/rpc/: archive_rpc.rs  datatype_rpc.rs  document_rpc.rs  index_rpc.rs  mod.rs  project_rpc.rs  role_rpc.rs  search_operations_rpc.rs  separator_rpc.rs  user_rpc.rs  value_rpc.rs
