[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp rust-web-app."
homepage="https://awesomeapp.dev"
repository = "https://github.com/awesomeapp-dev/rust-web-app"


[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = { version = "0.6", features = ["headers", "multipart"] }
axum-client-ip = "0.6.0"
tower = "0.4.13"
tower-http = { version = "0.4", features = ["full"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.3" # Optional
# -- Documents
aws-config = "1.5.5"
aws-sdk-s3 = "1.44.0"
aws-smithy-runtime-api = "1.7.2"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = {version = "0.3", features = ["serde"]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
anyhow = "1"
dotenvy = "0.15"


[dev-dependencies]
httpc-test = "0.1.1"
serial_test = "2"
