[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils", # e.g., base64, time.
    "crates/libs/lib-rpc", # e.g., rpc routing.
    "crates/libs/lib-auth", # e.g., for pwd, token.
    "crates/libs/lib-core", # e.g., model, ctx, config.

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",    
]

# [dependencies]
# tokio = { version = "1", features = ["full"] }
# hyper = { version = "0.14", features = ["full"] }
# # -- Json
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# serde_with = "3"
# # -- Web
# axum = { version = "0.6", features = ["headers", "multipart"] }
# axum-client-ip = "0.6.0"
# tower = "0.4.13"
# tower-http = { version = "0.4", features = ["full"] }
# tower-cookies = "0.9"
# # -- Data
# sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
# sea-query = "0.30"
# sea-query-binder = {version = "0.5" , features = ["sqlx-postgres","with-uuid"]}
# modql = { version = "0.3", features = ["with-sea-query"] }
# # -- Documents
# aws-config = "1.5.5"
# aws-sdk-s3 = "1.44.0"
# aws-smithy-runtime-api = "1.7.2"
# # -- Tracing
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# # -- Crypt & Encoding
# rand = "0.8"
# hmac = "0.12"
# sha2 = "0.10"
# base64 = "0.21"
# # -- Others
# uuid = {version = "1", features = ["v4","fast-rng",]}
# time = {version = "0.3", features = ["serde"]}
# lazy-regex = "3"
# async-trait = "0.1"
# strum_macros = "0.25"
# anyhow = "1"
# derive_more = {version = "1.0.0-beta", features = ["from"] }
# 
# [dev-dependencies]
# httpc-test = "0.1.1"
# serial_test = "2"
