[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp rust-web-app."
homepage=""
repository = "https://github.com/Its-Japo/GestorDocumental-BackEnd"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Web
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-client-ip = "0.6.0"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tower-cookies = "0.10"
# -- Data
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }
sea-query = { version = "0.30", features = ["with-json"]}
sea-query-binder = {version = "0.5" , features = ["sqlx-postgres","with-uuid", "with-time", "with-json"]}
modql = { version = "0.3.4", features = ["with-sea-query"] }
# -- Documents
aws-config = "1.5.5"
aws-sdk-s3 = "1.44.0"
aws-smithy-runtime-api = "1.7.2"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
argon2 = {version="0.5", features=["std"]}
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
async-trait = "0.1"
strum_macros = "0.25"
derive_more = {version = "1.0.0-beta", features = ["from"] }
enum_dispatch = "0.3"
regex = "1.11"

[dev-dependencies]
httpc-test = "0.1.1"
serial_test = "2"
